8190191: Subclasses of jdk.jfr.Event loaded from CDS breaks -XX:FlightRecorderOptions=retransform=false

Do not archive these classes

Reviewed-by: jiangli, sspitsyn